--- a/WebTestMQTTVersionHost/WebTestMQTTVersionHost.csproj
+++ b/WebTestMQTTVersionHost/WebTestMQTTVersionHost.csproj
@@ -72,6 +72,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileHandler.cs" />
     <Compile Include="MessageHandler.cs" />
     <Compile Include="WebTestMQTTVersionHostPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
